bugfix(banner): z-index above instagram

--- a/source/assets/css/_banner.sass
+++ b/source/assets/css/_banner.sass
@@ -10,7 +10,7 @@
   position: fixed
   top: 0
   left: 0
-  z-index: 1
+  z-index: 3
   background: $brand-secondary
   text-align: center
   padding: 10px 30px
